Practicas/Prac_2/Fle_Bi/parser.output
Estado 90 conflictos: 2 desplazamiento/reducción
Estado 143 conflictos: 2 desplazamiento/reducción, 6 reducción/reducción
Estado 176 conflictos: 3 desplazamiento/reducción
Estado 179 conflictos: 3 desplazamiento/reducción
Estado 198 conflictos: 6 desplazamiento/reducción
Estado 225 conflictos: 6 reducción/reducción
Estado 226 conflictos: 6 reducción/reducción


Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_ARI TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal TK_LIT_COMENTARIO

    3 bloque_alg: bloque TK_LIT_COMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: TK_PR_TIPO lista_d_tipo TK_PR_FTIPO TK_PR_SECUEN

   16 declaracion_cte: TK_PR_CONST lista_d_cte TK_PR_FCONST TK_PR_SECUEN

   17 declaracion_var: TK_PR_VAR lista_d_var TK_PR_FVAR TK_PR_SECUEN

   18 lista_d_tipo: TK_ID_ARI TK_PR_IGUAL d_tipo TK_PR_SECUEN lista_d_tipo
   19             | %empty

   20 d_tipo: TK_PR_TUPLA lista_campos TK_PR_FTUPLA
   21       | TK_PR_TABLA TK_PR_INIARRA expresion_t TK_PR_SUBRANGO expresion_t TK_PR_FINARRA TK_PR_DE d_tipo
   22       | TK_ID_ARI
   23       | expresion_t TK_PR_SUBRANGO expresion_t
   24       | TK_PR_REF d_tipo
   25       | TK_PR_ENTERO
   26       | TK_PR_BOOL
   27       | TK_PR_CHAR
   28       | TK_PR_REAL
   29       | TK_PR_CADENA

   30 expresion_t: expresion
   31            | TK_LIT_CARAC

   32 lista_campos: TK_ID_ARI TK_PR_IGUAL d_tipo TK_PR_SECUEN lista_campos
   33             | %empty

   34 lista_d_cte: TK_ID_ARI TK_PR_IGUAL literal TK_PR_SECUEN lista_d_cte
   35            | %empty

   36 literal: TK_LIT_BOOL
   37        | TK_LIT_CADE
   38        | TK_LIT_CARAC
   39        | TK_LIT_COMENTARIO
   40        | TK_LIT_ENTERO
   41        | TK_LIT_REAL

   42 lista_d_var: lista_id TK_PR_SECUEN lista_d_var
   43            | %empty

   44 lista_id: TK_ID_ARI TK_PR_DEFVAL d_tipo
   45         | TK_ID_BOL TK_PR_DEFVAL d_tipo
   46         | TK_ID_ARI TK_PR_COMA lista_id
   47         | TK_ID_BOL TK_PR_COMA lista_id

   48 decl_ent_sal: decl_ent
   49             | decl_ent decl_sal
   50             | decl_sal

   51 decl_ent: TK_PR_ENT lista_d_var

   52 decl_sal: TK_PR_SAL lista_d_var

   53 expresion: exp_a
   54          | exp_b
   55          | funcion_ll

   56 exp_a: exp_a TK_PR_SUMA exp_a
   57      | exp_a TK_PR_RESTA exp_a
   58      | exp_a TK_PR_MULT exp_a
   59      | exp_a TK_PR_BARRA exp_a
   60      | exp_a TK_PR_MOD exp_a
   61      | exp_a TK_PR_DIV exp_a
   62      | TK_PR_ABRIRPAR exp_a TK_PR_CERRARPAR
   63      | operando_ari
   64      | TK_LIT_ENTERO
   65      | TK_PR_REAL
   66      | TK_PR_RESTA exp_a

   67 exp_b: exp_b TK_PR_Y aux_b exp_b
   68      | exp_b TK_PR_O aux_b exp_b
   69      | TK_PR_NO exp_b
   70      | operando_bool
   71      | TK_PR_VERDADERO
   72      | TK_PR_FALSO
   73      | expresion compop expresion
   74      | TK_PR_ABRIRPAR exp_b TK_PR_CERRARPAR

   75 compop: TK_PR_MAYOR
   76       | TK_PR_MENOR
   77       | TK_PR_MAYIGU
   78       | TK_PR_MENIGU
   79       | TK_PR_IGUAL
   80       | TK_PR_DIST

   81 aux_b: %empty

   82 operando_ari: TK_ID_ARI
   83             | operando_ari TK_PR_PUNTO operando_ari
   84             | operando_ari TK_PR_INIARRA expresion TK_PR_FINARRA
   85             | operando_ari TK_PR_REF

   86 operando_bool: TK_ID_BOL
   87              | operando_bool TK_PR_PUNTO operando_bool
   88              | operando_bool TK_PR_INIARRA expresion TK_PR_FINARRA
   89              | operando_bool TK_PR_REF

   90 instrucciones: instruccion TK_PR_SECUEN instrucciones
   91              | instruccion

   92 instruccion: TK_PR_CONTINUAR
   93            | asignacion
   94            | alternativa
   95            | iteracion
   96            | accion_ll

   97 asignacion: operando_ari TK_PR_ASIG expresion
   98           | operando_bool TK_PR_ASIG expresion

   99 alternativa: TK_PR_SI expresion TK_PR_ENTONCES instrucciones lista_opciones TK_PR_FSI

  100 lista_opciones: TK_PR_ELSE expresion TK_PR_ENTONCES instrucciones lista_opciones
  101               | %empty

  102 iteracion: it_cota_fija
  103          | it_cota_exp

  104 it_cota_exp: TK_PR_MIENTRAS expresion TK_PR_HACER instrucciones TK_PR_FMIENTR

  105 it_cota_fija: TK_PR_PARA TK_ID_ARI TK_PR_ASIG expresion TK_PR_HASTA expresion TK_PR_HACER instrucciones TK_PR_FPARA

  106 accion_d: TK_PR_ACCION a_cabecera bloque TK_PR_FACCIO

  107 funcion_d: TK_PR_FUNCION f_cabecera bloque TK_PR_DEV expresion TK_PR_FFUNCION

  108 a_cabecera: TK_ID_ARI TK_PR_ABRIRPAR d_par_form TK_PR_CERRARPAR TK_PR_SECUEN

  109 f_cabecera: TK_ID_ARI TK_PR_ABRIRPAR lista_d_var TK_PR_CERRARPAR TK_PR_DEV d_tipo TK_PR_SECUEN

  110 d_par_form: d_p_form TK_PR_SECUEN d_par_form
  111           | %empty

  112 d_p_form: TK_PR_ENTERO lista_id TK_PR_DEFVAL d_tipo
  113         | TK_PR_SAL lista_id TK_PR_DEFVAL d_tipo
  114         | TK_PR_INOUT lista_id TK_PR_DEFVAL d_tipo

  115 accion_ll: TK_ID_ARI TK_PR_ABRIRPAR l_ll TK_PR_CERRARPAR

  116 funcion_ll: TK_ID_ARI TK_PR_ABRIRPAR l_ll TK_PR_CERRARPAR

  117 l_ll: expresion TK_PR_COMA l_ll
  118     | expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    TK_PR_CONTINUAR (258) 92
    TK_PR_DE (259) 21
    TK_PR_DEV (260) 107 109
    TK_PR_ENT (261) 51
    TK_PR_INOUT (262) 114
    TK_PR_HACER (263) 104 105
    TK_PR_HASTA (264) 105
    TK_PR_REF (265) 24 85 89
    TK_PR_SAL (266) 52 113
    TK_PR_VERDADERO (267) 71
    TK_PR_FALSO (268) 72
    TK_PR_FUNCION (269) 107
    TK_PR_FFUNCION (270) 107
    TK_PR_ACCION (271) 106
    TK_PR_FACCIO (272) 106
    TK_PR_ALGORIT (273) 1
    TK_PR_FALGORI (274) 1
    TK_PR_MIENTRAS (275) 104
    TK_PR_FMIENTR (276) 104
    TK_PR_PARA (277) 105
    TK_PR_FPARA (278) 105
    TK_PR_SI (279) 99
    TK_PR_FSI (280) 99
    TK_PR_TIPO (281) 15
    TK_PR_FTIPO (282) 15
    TK_PR_TUPLA (283) 20
    TK_PR_FTUPLA (284) 20
    TK_PR_VAR (285) 17
    TK_PR_FVAR (286) 17
    TK_PR_REAL (287) 28 65
    TK_PR_ENTERO (288) 25 112
    TK_PR_BOOL (289) 26
    TK_PR_CADENA (290) 29
    TK_PR_CHAR (291) 27
    TK_PR_CONST (292) 16
    TK_PR_FCONST (293) 16
    TK_PR_TABLA (294) 21
    TK_PR_ASIG (295) 97 98 105
    TK_PR_SECUEN (296) 1 15 16 17 18 32 34 42 90 108 109 110
    TK_PR_ELSE (297) 100
    TK_PR_INIARRA (298) 21 84 88
    TK_PR_FINARRA (299) 21 84 88
    TK_PR_ENTONCES (300) 99 100
    TK_PR_COMA (301) 46 47 117
    TK_PR_PUNTO (302) 1 83 87
    TK_PR_SUBRANGO (303) 21 23
    TK_PR_DEFVAL (304) 44 45 112 113 114
    TK_PR_ABRIRPAR (305) 62 74 108 109 115 116
    TK_PR_CERRARPAR (306) 62 74 108 109 115 116
    TK_PR_SUMA (307) 56
    TK_PR_MULT (308) 58
    TK_PR_RESTA (309) 57 66
    TK_PR_BARRA (310) 59
    TK_PR_DIV (311) 61
    TK_PR_MOD (312) 60
    TK_PR_MAYOR (313) 75
    TK_PR_MENOR (314) 76
    TK_PR_MAYIGU (315) 77
    TK_PR_MENIGU (316) 78
    TK_PR_IGUAL (317) 18 32 34 79
    TK_PR_DIST (318) 80
    TK_PR_O (319) 68
    TK_PR_Y (320) 67
    TK_PR_NO (321) 69
    TK_ID_ARI <ty_string> (322) 1 18 22 32 34 44 46 82 105 108 109 115 116
    TK_ID_BOL <ty_string> (323) 45 47 86
    TK_LIT_CARAC <ty_caracter> (324) 31 38
    TK_LIT_CADE <ty_string> (325) 37
    TK_LIT_COMENTARIO <ty_string> (326) 2 3 39
    TK_LIT_ENTERO <ty_num_entero> (327) 40 64
    TK_LIT_REAL <ty_num_real> (328) 41
    TK_LIT_BOOL <ty_boolean> (329) 36


No terminales con las reglas donde aparecen

    $accept (75)
        on left: 0
    desc_algoritmo (76)
        on left: 1
        on right: 0
    cabecera_alg (77)
        on left: 2
        on right: 1
    bloque_alg (78)
        on left: 3
        on right: 1
    decl_globales (79)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (80)
        on left: 7 8 9
        on right: 2 7 8
    bloque (81)
        on left: 10
        on right: 3 106 107
    declaraciones (82)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (83)
        on left: 15
        on right: 4 11
    declaracion_cte (84)
        on left: 16
        on right: 5 12
    declaracion_var (85)
        on left: 17
        on right: 13
    lista_d_tipo (86)
        on left: 18 19
        on right: 15 18
    d_tipo <ty_tipo> (87)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 18 21 24 32 44 45 109 112 113 114
    expresion_t (88)
        on left: 30 31
        on right: 21 23
    lista_campos (89)
        on left: 32 33
        on right: 20 32
    lista_d_cte (90)
        on left: 34 35
        on right: 16 34
    literal (91)
        on left: 36 37 38 39 40 41
        on right: 34
    lista_d_var (92)
        on left: 42 43
        on right: 17 42 51 52 109
    lista_id <ty_tipo> (93)
        on left: 44 45 46 47
        on right: 42 46 47 112 113 114
    decl_ent_sal (94)
        on left: 48 49 50
        on right: 2
    decl_ent (95)
        on left: 51
        on right: 48 49
    decl_sal (96)
        on left: 52
        on right: 49 50
    expresion <ty_st_exp> (97)
        on left: 53 54 55
        on right: 30 73 84 88 97 98 99 100 104 105 107 117 118
    exp_a <ty_st_ari> (98)
        on left: 56 57 58 59 60 61 62 63 64 65 66
        on right: 53 56 57 58 59 60 61 62 66
    exp_b <ty_st_bool> (99)
        on left: 67 68 69 70 71 72 73 74
        on right: 54 67 68 69 74
    compop <ty_tipo> (100)
        on left: 75 76 77 78 79 80
        on right: 73
    aux_b <ty_tipo> (101)
        on left: 81
        on right: 67 68
    operando_ari <ty_st_ari> (102)
        on left: 82 83 84 85
        on right: 63 83 84 85 97
    operando_bool <ty_st_bool> (103)
        on left: 86 87 88 89
        on right: 70 87 88 89 98
    instrucciones (104)
        on left: 90 91
        on right: 10 90 99 100 104 105
    instruccion (105)
        on left: 92 93 94 95 96
        on right: 90 91
    asignacion (106)
        on left: 97 98
        on right: 93
    alternativa (107)
        on left: 99
        on right: 94
    lista_opciones (108)
        on left: 100 101
        on right: 99 100
    iteracion (109)
        on left: 102 103
        on right: 95
    it_cota_exp (110)
        on left: 104
        on right: 103
    it_cota_fija (111)
        on left: 105
        on right: 102
    accion_d (112)
        on left: 106
        on right: 7
    funcion_d (113)
        on left: 107
        on right: 8
    a_cabecera (114)
        on left: 108
        on right: 106
    f_cabecera (115)
        on left: 109
        on right: 107
    d_par_form (116)
        on left: 110 111
        on right: 108 110
    d_p_form (117)
        on left: 112 113 114
        on right: 110
    accion_ll (118)
        on left: 115
        on right: 96
    funcion_ll (119)
        on left: 116
        on right: 55
    l_ll (120)
        on left: 117 118
        on right: 115 116 117


Estado 0

    0 $accept: . desc_algoritmo $end

    TK_PR_ALGORIT  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: TK_PR_ALGORIT . TK_ID_ARI TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_ID_ARI  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_ARI . TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_SECUEN  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_ARI TK_PR_SECUEN . cabecera_alg bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    cabecera_alg      ir al estado 8
    decl_globales     ir al estado 9
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 6

   15 declaracion_tipo: TK_PR_TIPO . lista_d_tipo TK_PR_FTIPO TK_PR_SECUEN

    TK_ID_ARI  desplazar e ir al estado 12

    $default  reduce usando la regla 19 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   16 declaracion_cte: TK_PR_CONST . lista_d_cte TK_PR_FCONST TK_PR_SECUEN

    TK_ID_ARI  desplazar e ir al estado 14

    $default  reduce usando la regla 35 (lista_d_cte)

    lista_d_cte  ir al estado 15


Estado 8

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_ARI TK_PR_SECUEN cabecera_alg . bloque_alg TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque_alg        ir al estado 17
    bloque            ir al estado 18
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal TK_LIT_COMENTARIO

    TK_PR_FUNCION  desplazar e ir al estado 23
    TK_PR_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 25
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 10

    4 decl_globales: declaracion_tipo . decl_globales

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 28
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 11

    5 decl_globales: declaracion_cte . decl_globales

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 6 (decl_globales)

    decl_globales     ir al estado 29
    declaracion_tipo  ir al estado 10
    declaracion_cte   ir al estado 11


Estado 12

   18 lista_d_tipo: TK_ID_ARI . TK_PR_IGUAL d_tipo TK_PR_SECUEN lista_d_tipo

    TK_PR_IGUAL  desplazar e ir al estado 30


Estado 13

   15 declaracion_tipo: TK_PR_TIPO lista_d_tipo . TK_PR_FTIPO TK_PR_SECUEN

    TK_PR_FTIPO  desplazar e ir al estado 31


Estado 14

   34 lista_d_cte: TK_ID_ARI . TK_PR_IGUAL literal TK_PR_SECUEN lista_d_cte

    TK_PR_IGUAL  desplazar e ir al estado 32


Estado 15

   16 declaracion_cte: TK_PR_CONST lista_d_cte . TK_PR_FCONST TK_PR_SECUEN

    TK_PR_FCONST  desplazar e ir al estado 33


Estado 16

   17 declaracion_var: TK_PR_VAR . lista_d_var TK_PR_FVAR TK_PR_SECUEN

    TK_ID_ARI  desplazar e ir al estado 34
    TK_ID_BOL  desplazar e ir al estado 35

    $default  reduce usando la regla 43 (lista_d_var)

    lista_d_var  ir al estado 36
    lista_id     ir al estado 37


Estado 17

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_ARI TK_PR_SECUEN cabecera_alg bloque_alg . TK_PR_FALGORI TK_PR_PUNTO

    TK_PR_FALGORI  desplazar e ir al estado 38


Estado 18

    3 bloque_alg: bloque . TK_LIT_COMENTARIO

    TK_LIT_COMENTARIO  desplazar e ir al estado 39


Estado 19

   10 bloque: declaraciones . instrucciones

    TK_PR_CONTINUAR  desplazar e ir al estado 40
    TK_PR_MIENTRAS   desplazar e ir al estado 41
    TK_PR_PARA       desplazar e ir al estado 42
    TK_PR_SI         desplazar e ir al estado 43
    TK_ID_ARI        desplazar e ir al estado 44
    TK_ID_BOL        desplazar e ir al estado 45

    operando_ari   ir al estado 46
    operando_bool  ir al estado 47
    instrucciones  ir al estado 48
    instruccion    ir al estado 49
    asignacion     ir al estado 50
    alternativa    ir al estado 51
    iteracion      ir al estado 52
    it_cota_exp    ir al estado 53
    it_cota_fija   ir al estado 54
    accion_ll      ir al estado 55


Estado 20

   11 declaraciones: declaracion_tipo . declaraciones

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 56
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 21

   12 declaraciones: declaracion_cte . declaraciones

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 57
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 22

   13 declaraciones: declaracion_var . declaraciones

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    declaraciones     ir al estado 58
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 23

  107 funcion_d: TK_PR_FUNCION . f_cabecera bloque TK_PR_DEV expresion TK_PR_FFUNCION

    TK_ID_ARI  desplazar e ir al estado 59

    f_cabecera  ir al estado 60


Estado 24

  106 accion_d: TK_PR_ACCION . a_cabecera bloque TK_PR_FACCIO

    TK_ID_ARI  desplazar e ir al estado 61

    a_cabecera  ir al estado 62


Estado 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal TK_LIT_COMENTARIO

    TK_PR_ENT  desplazar e ir al estado 63
    TK_PR_SAL  desplazar e ir al estado 64

    decl_ent_sal  ir al estado 65
    decl_ent      ir al estado 66
    decl_sal      ir al estado 67


Estado 26

    7 decl_a_f: accion_d . decl_a_f

    TK_PR_FUNCION  desplazar e ir al estado 23
    TK_PR_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 68
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 27

    8 decl_a_f: funcion_d . decl_a_f

    TK_PR_FUNCION  desplazar e ir al estado 23
    TK_PR_ACCION   desplazar e ir al estado 24

    $default  reduce usando la regla 9 (decl_a_f)

    decl_a_f   ir al estado 69
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 28

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 4 (decl_globales)


Estado 29

    5 decl_globales: declaracion_cte decl_globales .

    $default  reduce usando la regla 5 (decl_globales)


Estado 30

   18 lista_d_tipo: TK_ID_ARI TK_PR_IGUAL . d_tipo TK_PR_SECUEN lista_d_tipo

    TK_PR_REF        desplazar e ir al estado 70
    TK_PR_VERDADERO  desplazar e ir al estado 71
    TK_PR_FALSO      desplazar e ir al estado 72
    TK_PR_TUPLA      desplazar e ir al estado 73
    TK_PR_REAL       desplazar e ir al estado 74
    TK_PR_ENTERO     desplazar e ir al estado 75
    TK_PR_BOOL       desplazar e ir al estado 76
    TK_PR_CADENA     desplazar e ir al estado 77
    TK_PR_CHAR       desplazar e ir al estado 78
    TK_PR_TABLA      desplazar e ir al estado 79
    TK_PR_ABRIRPAR   desplazar e ir al estado 80
    TK_PR_RESTA      desplazar e ir al estado 81
    TK_PR_NO         desplazar e ir al estado 82
    TK_ID_ARI        desplazar e ir al estado 83
    TK_ID_BOL        desplazar e ir al estado 45
    TK_LIT_CARAC     desplazar e ir al estado 84
    TK_LIT_ENTERO    desplazar e ir al estado 85

    d_tipo         ir al estado 86
    expresion_t    ir al estado 87
    expresion      ir al estado 88
    exp_a          ir al estado 89
    exp_b          ir al estado 90
    operando_ari   ir al estado 91
    operando_bool  ir al estado 92
    funcion_ll     ir al estado 93


Estado 31

   15 declaracion_tipo: TK_PR_TIPO lista_d_tipo TK_PR_FTIPO . TK_PR_SECUEN

    TK_PR_SECUEN  desplazar e ir al estado 94


Estado 32

   34 lista_d_cte: TK_ID_ARI TK_PR_IGUAL . literal TK_PR_SECUEN lista_d_cte

    TK_LIT_CARAC       desplazar e ir al estado 95
    TK_LIT_CADE        desplazar e ir al estado 96
    TK_LIT_COMENTARIO  desplazar e ir al estado 97
    TK_LIT_ENTERO      desplazar e ir al estado 98
    TK_LIT_REAL        desplazar e ir al estado 99
    TK_LIT_BOOL        desplazar e ir al estado 100

    literal  ir al estado 101


Estado 33

   16 declaracion_cte: TK_PR_CONST lista_d_cte TK_PR_FCONST . TK_PR_SECUEN

    TK_PR_SECUEN  desplazar e ir al estado 102


Estado 34

   44 lista_id: TK_ID_ARI . TK_PR_DEFVAL d_tipo
   46         | TK_ID_ARI . TK_PR_COMA lista_id

    TK_PR_COMA    desplazar e ir al estado 103
    TK_PR_DEFVAL  desplazar e ir al estado 104


Estado 35

   45 lista_id: TK_ID_BOL . TK_PR_DEFVAL d_tipo
   47         | TK_ID_BOL . TK_PR_COMA lista_id

    TK_PR_COMA    desplazar e ir al estado 105
    TK_PR_DEFVAL  desplazar e ir al estado 106


Estado 36

   17 declaracion_var: TK_PR_VAR lista_d_var . TK_PR_FVAR TK_PR_SECUEN

    TK_PR_FVAR  desplazar e ir al estado 107


Estado 37

   42 lista_d_var: lista_id . TK_PR_SECUEN lista_d_var

    TK_PR_SECUEN  desplazar e ir al estado 108


Estado 38

    1 desc_algoritmo: TK_PR_ALGORIT TK_ID_ARI TK_PR_SECUEN cabecera_alg bloque_alg TK_PR_FALGORI . TK_PR_PUNTO

    TK_PR_PUNTO  desplazar e ir al estado 109


Estado 39

    3 bloque_alg: bloque TK_LIT_COMENTARIO .

    $default  reduce usando la regla 3 (bloque_alg)


Estado 40

   92 instruccion: TK_PR_CONTINUAR .

    $default  reduce usando la regla 92 (instruccion)


Estado 41

  104 it_cota_exp: TK_PR_MIENTRAS . expresion TK_PR_HACER instrucciones TK_PR_FMIENTR

    TK_PR_VERDADERO  desplazar e ir al estado 71
    TK_PR_FALSO      desplazar e ir al estado 72
    TK_PR_REAL       desplazar e ir al estado 110
    TK_PR_ABRIRPAR   desplazar e ir al estado 80
    TK_PR_RESTA      desplazar e ir al estado 81
    TK_PR_NO         desplazar e ir al estado 82
    TK_ID_ARI        desplazar e ir al estado 111
    TK_ID_BOL        desplazar e ir al estado 45
    TK_LIT_ENTERO    desplazar e ir al estado 85

    expresion      ir al estado 112
    exp_a          ir al estado 89
    exp_b          ir al estado 90
    operando_ari   ir al estado 91
    operando_bool  ir al estado 92
    funcion_ll     ir al estado 93


Estado 42

  105 it_cota_fija: TK_PR_PARA . TK_ID_ARI TK_PR_ASIG expresion TK_PR_HASTA expresion TK_PR_HACER instrucciones TK_PR_FPARA

    TK_ID_ARI  desplazar e ir al estado 113


Estado 43

   99 alternativa: TK_PR_SI . expresion TK_PR_ENTONCES instrucciones lista_opciones TK_PR_FSI

    TK_PR_VERDADERO  desplazar e ir al estado 71
    TK_PR_FALSO      desplazar e ir al estado 72
    TK_PR_REAL       desplazar e ir al estado 110
    TK_PR_ABRIRPAR   desplazar e ir al estado 80
    TK_PR_RESTA      desplazar e ir al estado 81
    TK_PR_NO         desplazar e ir al estado 82
    TK_ID_ARI        desplazar e ir al estado 111
    TK_ID_BOL        desplazar e ir al estado 45
    TK_LIT_ENTERO    desplazar e ir al estado 85

    expresion      ir al estado 114
    exp_a          ir al estado 89
    exp_b          ir al estado 90
    operando_ari   ir al estado 91
    operando_bool  ir al estado 92
    funcion_ll     ir al estado 93


Estado 44

   82 operando_ari: TK_ID_ARI .
  115 accion_ll: TK_ID_ARI . TK_PR_ABRIRPAR l_ll TK_PR_CERRARPAR

    TK_PR_ABRIRPAR  desplazar e ir al estado 115

    $default  reduce usando la regla 82 (operando_ari)


Estado 45

   86 operando_bool: TK_ID_BOL .

    $default  reduce usando la regla 86 (operando_bool)


Estado 46

   83 operando_ari: operando_ari . TK_PR_PUNTO operando_ari
   84             | operando_ari . TK_PR_INIARRA expresion TK_PR_FINARRA
   85             | operando_ari . TK_PR_REF
   97 asignacion: operando_ari . TK_PR_ASIG expresion

    TK_PR_REF      desplazar e ir al estado 116
    TK_PR_ASIG     desplazar e ir al estado 117
    TK_PR_INIARRA  desplazar e ir al estado 118
    TK_PR_PUNTO    desplazar e ir al estado 119


Estado 47

   87 operando_bool: operando_bool . TK_PR_PUNTO operando_bool
   88              | operando_bool . TK_PR_INIARRA expresion TK_PR_FINARRA
   89              | operando_bool . TK_PR_REF
   98 asignacion: operando_bool . TK_PR_ASIG expresion

    TK_PR_REF      desplazar e ir al estado 120
    TK_PR_ASIG     desplazar e ir al estado 121
    TK_PR_INIARRA  desplazar e ir al estado 122
    TK_PR_PUNTO    desplazar e ir al estado 123


Estado 48

   10 bloque: declaraciones instrucciones .

    $default  reduce usando la regla 10 (bloque)


Estado 49

   90 instrucciones: instruccion . TK_PR_SECUEN instrucciones
   91              | instruccion .

    TK_PR_SECUEN  desplazar e ir al estado 124

    $default  reduce usando la regla 91 (instrucciones)


Estado 50

   93 instruccion: asignacion .

    $default  reduce usando la regla 93 (instruccion)


Estado 51

   94 instruccion: alternativa .

    $default  reduce usando la regla 94 (instruccion)


Estado 52

   95 instruccion: iteracion .

    $default  reduce usando la regla 95 (instruccion)


Estado 53

  103 iteracion: it_cota_exp .

    $default  reduce usando la regla 103 (iteracion)


Estado 54

  102 iteracion: it_cota_fija .

    $default  reduce usando la regla 102 (iteracion)


Estado 55

   96 instruccion: accion_ll .

    $default  reduce usando la regla 96 (instruccion)


Estado 56

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce usando la regla 11 (declaraciones)


Estado 57

   12 declaraciones: declaracion_cte declaraciones .

    $default  reduce usando la regla 12 (declaraciones)


Estado 58

   13 declaraciones: declaracion_var declaraciones .

    $default  reduce usando la regla 13 (declaraciones)


Estado 59

  109 f_cabecera: TK_ID_ARI . TK_PR_ABRIRPAR lista_d_var TK_PR_CERRARPAR TK_PR_DEV d_tipo TK_PR_SECUEN

    TK_PR_ABRIRPAR  desplazar e ir al estado 125


Estado 60

  107 funcion_d: TK_PR_FUNCION f_cabecera . bloque TK_PR_DEV expresion TK_PR_FFUNCION

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque            ir al estado 126
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 61

  108 a_cabecera: TK_ID_ARI . TK_PR_ABRIRPAR d_par_form TK_PR_CERRARPAR TK_PR_SECUEN

    TK_PR_ABRIRPAR  desplazar e ir al estado 127


Estado 62

  106 accion_d: TK_PR_ACCION a_cabecera . bloque TK_PR_FACCIO

    TK_PR_TIPO   desplazar e ir al estado 6
    TK_PR_VAR    desplazar e ir al estado 16
    TK_PR_CONST  desplazar e ir al estado 7

    $default  reduce usando la regla 14 (declaraciones)

    bloque            ir al estado 128
    declaraciones     ir al estado 19
    declaracion_tipo  ir al estado 20
    declaracion_cte   ir al estado 21
    declaracion_var   ir al estado 22


Estado 63

   51 decl_ent: TK_PR_ENT . lista_d_var

    TK_ID_ARI  desplazar e ir al estado 34
    TK_ID_BOL  desplazar e ir al estado 35

    $default  reduce usando la regla 43 (lista_d_var)

    lista_d_var  ir al estado 129
    lista_id     ir al estado 37


Estado 64

   52 decl_sal: TK_PR_SAL . lista_d_var

    TK_ID_ARI  desplazar e ir al estado 34
    TK_ID_BOL  desplazar e ir al estado 35

    $default  reduce usando la regla 43 (lista_d_var)

    lista_d_var  ir al estado 130
    lista_id     ir al estado 37


Estado 65

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal . TK_LIT_COMENTARIO

    TK_LIT_COMENTARIO  desplazar e ir al estado 131


Estado 66

   48 decl_ent_sal: decl_ent .
   49             | decl_ent . decl_sal

    TK_PR_SAL  desplazar e ir al estado 64

    $default  reduce usando la regla 48 (decl_ent_sal)
